--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </label>
         <input id='label-5' type='checkbox'/>
         <label for='label-5'>
-          <h2>Watch Series<span>Friends</span></h2>   
+          <h2>Watch Series<span>Chernobyl</span></h2>   
         </label>
     </div>
 </body>
 </html>
 
-<!-- Developed be SeyedMohammadMahdi Kiaei -->
+<!-- Developed be Mohammad Kiaei -->
